influxdb/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  namespace: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
